--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ html{
 }
 
 .photo-cover{
-  background: #34495e url(pic.jpeg) no-repeat center center/cover fixed;
+  background: #34495e url(Images/pic.jpeg) no-repeat center center/cover fixed;
   height: 100%;
   position: relative;
 }
